fixed align in posts page

--- a/src/pages/Posts/Posts.css
+++ b/src/pages/Posts/Posts.css
@@ -7,7 +7,6 @@
 }
 
 #posts #content{
-    align-items: center;
     align-self: center;
     display: flex;
     flex-direction: row;
